--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ div.container{
     width: 100%;
     height: 100%;
     font-family: sans-serif;
-    min-height: 2100px;
+    min-height: 2630px;
     min-width: 100%;
    
 }
@@ -75,6 +75,27 @@ div.container{
         top: 40px;
         font-size: 25px;
     }
+    .banner {
+        position: absolute;
+        display: flex;
+        height: 560px;
+        width: 1186px;
+        left: 230px;
+        top: 130px;
+        background-repeat:no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    .banner1{
+        background-image: url('/imagem/banner4.png')
+    }
+    .banner2{
+        background-image: url('/imagem/banner2.png')
+    }
+    .banner3{
+        background-image: url('/imagem/banner3.png');
+    }
+
     div.comprar{
         position: absolute;
         width: 120px;
@@ -99,7 +120,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 230px;
-        top: 164px;
+        top: 700px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -110,7 +131,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 551px;
-        top: 164px;
+        top: 700px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -121,7 +142,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 881px;
-        top: 164px;
+        top: 700px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -132,7 +153,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 1200px;
-        top: 164px;
+        top: 700px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -143,7 +164,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 230px;
-        top: 536px;
+        top:1050px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -154,7 +175,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 551px;
-        top: 536px;
+        top:1050px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -165,7 +186,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 881px;
-        top: 536px;
+        top:1050px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -176,7 +197,7 @@ div.container{
         width: 215px;
         height: 330px;
         left: 1200px;
-        top: 536px;
+        top:1050px;
         background-color: #d9d9d9;
         text-align: center;
         color: #1a71ae;
@@ -188,7 +209,7 @@ div.container{
         width: 30%;
         height: 315px;
         left: 230px;
-        top: 950px;
+        top: 1450px;
         font-size: 25px;
         text-align: justify;
         font-family: sans-serif;
@@ -219,7 +240,7 @@ div.container{
         width: 1440px;
         height: 580px;
         left: 0px;
-        top: 1508px;
+        top: 2050px;
     }
     div.logo-rodape{
         position: absolute;
